--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.98"
 async-trait = "0.1.88"
-pingora = { version = "0.4.0", features = ["lb", "rustls"] }
+pingora = { version = "0.4.0", features = ["lb", "openssl"] }
 serde = { version = "1.0.219", features = ["derive"] }
-tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 
